# gaga-product-photo-editor

./: .gitignore  build_icons.py  jewelry_tool.py  pyproject.toml  start.bat  start.command
.github/workflows/: build.yml
