[tool.poetry]
name = "jewelry-tool"
version = "0.1.0"
description = "珠寶代購圖片工具"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Pillow = "^10.0.0"
firebase-admin = "^6.0.0"

[tool.poetry.scripts]
jewelry-tool = "jewelry_tool:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.0.0) ; python_version >= \"3.11\" and python_version < \"3.15\""
]
